@@ -1460,15 +1460,13 @@ int retropt_socket_pf(struct opt *opts, int *pf) {
       } else if (!strcasecmp("inet", pfname) ||
 	  !strcasecmp("inet4", pfname) ||
 	  !strcasecmp("ip4", pfname) ||
-	  !strcasecmp("ipv4", pfname) ||
-	  !strcasecmp("2", pfname)) {
+	  !strcasecmp("ipv4", pfname)) {
 	 *pf = PF_INET;
 #endif /* WITH_IP4 */
 #if WITH_IP6
       } else if (!strcasecmp("inet6", pfname) ||
 		 !strcasecmp("ip6", pfname) ||
-		 !strcasecmp("ipv6", pfname) ||
-		 !strcasecmp("10", pfname)) {
+		 !strcasecmp("ipv6", pfname)) {
 	 *pf = PF_INET6;
 #endif /* WITH_IP6 */
       } else {
